--- a/proj3-1/index.html
+++ b/proj3-1/index.html
@@ -44,7 +44,7 @@
 <h2 align="middle">Tiger Ma & William Shue</h2>
 
 <!-- Add Website URL -->
-<h2 align="middle">Website URL: <a href="TODO">https://wshue0.github.io/chicken-prep/proj3-1/index.html</a></h2>
+<h2 align="middle">Website URL: <a href="https://wshue0.github.io/chicken-prep/proj3-1/index.html">https://wshue0.github.io/chicken-prep/proj3-1/index.html</a></h2>
 
 <br><br>
 
